fix overflow on nametag

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main{
     width:100%;
     height: 40%;
     background-color: aquamarine;
-    border-radius: 50px;
+    border-radius: 30px;
     display: grid;
     grid-template-rows: 2fr 4fr 1fr;
                 
@@ -61,7 +61,7 @@ main{
 }
 
 .intro h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
     text-transform: uppercase;
 }
@@ -71,7 +71,7 @@ main{
 }
 
 .name h3 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: black;
     text-transform: uppercase;
 }
